--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 
     h1 {
       font-family: 'Pacifico', cursive;
-      font-size: 2.2em;
+      font-size: 2.5em;
       margin-bottom: 15px;
-      animation: fadeIn 2s ease-in-out;
+      animation: fadeInLetters 2s ease-in-out;
+    }
+
+    @keyframes fadeInLetters {
+      from { opacity: 0; letter-spacing: 2px; }
+      to { opacity: 1; letter-spacing: normal; }
     }
 
     p {
@@ -37,35 +42,40 @@
 
     .btn {
       padding: 15px 30px;
-      background-color: #ff69b4;
+      background: linear-gradient(45deg, #ff69b4, #ff85a1);
       color: #fff;
       border: none;
       border-radius: 30px;
       font-size: 1.3em;
       cursor: pointer;
       margin: 10px;
-      animation: fadeIn 4s ease-in-out;
       transition: all 0.3s ease;
       width: 60%;
       max-width: 250px;
+      box-shadow: 0 0 20px rgba(255, 105, 180, 0.7);
     }
 
     .btn:hover {
-      background-color: #ff85a1;
       transform: scale(1.1);
+      box-shadow: 0 0 30px rgba(255, 105, 180, 1);
     }
 
     .emoji {
       position: absolute;
       font-size: 28px;
-      animation: float 10s infinite linear;
+      animation: float 10s infinite linear, spin 6s infinite linear;
       pointer-events: none;
     }
 
     @keyframes float {
-      0% { transform: translateY(100vh); opacity: 0; }
+      0% { transform: translateY(100vh) rotate(0deg); opacity: 0; }
       50% { opacity: 1; }
-      100% { transform: translateY(-10vh); opacity: 0; }
+      100% { transform: translateY(-10vh) rotate(360deg); opacity: 0; }
+    }
+
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
     }
 
     @keyframes fadeIn {
@@ -111,7 +121,7 @@
 
 <script>
   const emojis = ["💖", "💕", "💘", "💝", "💞", "🥰", "😘", "😍"];
-  for (let i = 0; i < 30; i++) {
+  for (let i = 0; i < 40; i++) {
     let emoji = document.createElement("div");
     emoji.textContent = emojis[Math.floor(Math.random() * emojis.length)];
     emoji.classList.add("emoji");
@@ -123,8 +133,8 @@
   const btnNo = document.getElementById("btnNo");
 
   function mensajeSi() {
-    alert("¡Te amo, Mi jaqueline! 💖💖💖");
-    fuegosDeCorazones();
+    explosionCorazones();
+    setTimeout(() => alert("¡Sí quiero, Jaqueline! 💖💖💖"), 500);
   }
 
   function moverBoton() {
@@ -156,13 +166,13 @@
     setTimeout(() => toast.style.display = 'none', 2000);
   }
 
-  function fuegosDeCorazones() {
-    for (let i = 0; i < 30; i++) {
+  function explosionCorazones() {
+    for (let i = 0; i < 50; i++) {
       let heart = document.createElement("div");
       heart.textContent = "💖";
       heart.classList.add("emoji");
-      heart.style.left = `${window.innerWidth/2}px`;
-      heart.style.top = `${window.innerHeight/2}px`;
+      heart.style.left = `${window.innerWidth / 2}px`;
+      heart.style.top = `${window.innerHeight / 2}px`;
       heart.style.animationDuration = (1 + Math.random()) + "s";
       document.body.appendChild(heart);
       setTimeout(() => heart.remove(), 1000);
