Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   function mensajeSi() {
     explosionCorazones();
-    setTimeout(() => alert("¡Sí quiero, Jaqueline! 💖💖💖"), 500);
+    setTimeout(() => alert("¡te amo mi corazón de melón! 💖💖💖"), 500);
   }
 
   function animarBotonNo() {
