Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -128,26 +128,26 @@
 
   function animarBotonNo() {
     const frasesDivertidas = [
-      "¡No puedes decir que no! 😝",
-      "¡Atrápame si puedes! 😂",
-      "¡No hay escapatoria! 😜",
-      "¡No puedes negarlo! 😆",
-      "¡El amor es inevitable! 💖",
-      "¿En serio dirías que no? 🥺",
-      "¡Imposible resistirse! 🤪",
-      "¡Te amo demasiado para un no! 😘",
-      "¡No, no es una opción! 😂",
-      "¡Eres demasiado especial para negarte! 💘",
-      "¡No me puedes decir que no, por favor! 😍",
-      "¡El amor verdadero no acepta un no! 🥰",
-      "¡No, no y no! 😜",
-      "¡Ni lo pienses! 💝",
-      "¡Te atrapó mi corazón! 💞",
-      "¡Tu respuesta es solo sí! 💖",
-      "¡Te amo demasiado! 💘",
-      "¡Vamos, Jaqueline, di que sí! 😍",
-      "¡No hay no posible! 😂",
-      "¡Siempre juntos! 💝"
+      "¡No me puedes decir que no porque ya te atrapó mi corazón! 💖",
+      "¡No puedes decir que no porque me haces muy feliz! 😍",
+      "¡No hay manera de que digas que no! 💘",
+      "¡No puedes decir que no porque eres mi todo! 💞",
+      "¡No puedes decir que no porque eres única e irremplazable! 💖",
+      "¡No me digas que no, porque ya te dije que eres lo mejor de mi vida! 😘",
+      "¡No puedes decir que no porque te amo más que ayer! 💝",
+      "¡No hay escapatoria del sí! 💕",
+      "¡No puedes decir que no porque sin ti no soy nada! 😢",
+      "¡No me puedes decir que no porque eres mi destino! 💌",
+      "¡No puedes decir que no porque eres mi felicidad! 🥰",
+      "¡No puedes decir que no porque eres lo mejor que me ha pasado! 💖",
+      "¡No me digas que no porque no hay nadie más como tú! 🌟",
+      "¡No puedes decir que no porque juntos somos invencibles! 💘",
+      "¡No puedes decir que no porque yo ya dije que sí por los dos! 😜",
+      "¡No puedes decir que no porque el amor manda! 💞",
+      "¡No puedes decir que no porque simplemente eres tú! 💝",
+      "¡No puedes decir que no porque me robaste el corazón! 💘",
+      "¡No puedes decir que no porque me haces sonreír todos los días! 😊",
+      "¡No puedes decir que no porque esta página es solo para ti! 😍"
     ];
     alert(frasesDivertidas[Math.floor(Math.random() * frasesDivertidas.length)]);
     btnNo.classList.add('vibrar');
