Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </head>
 <body>
 
-<h1>💖 Jaqueline, ¿Quieres ser mi novia? 💖</h1>
+<h1>💖 Mi jaqueline,me amas?💖</h1>
 <p>Desde que te conocí, mi mundo cambió. Esta página es solo una pequeña muestra de lo que eres para mí. 💌</p>
 
 <button id="btnSi" class="btn" onclick="mensajeSi()">Sí 💖</button>
